tests/should_pass/import_resource_chain_dep1.fit
import import_resource_chain_dep2

fn use_widget(w: move Widget) -> () {
    drop_widget(w)
}
