tests/should_fail/import_cycle_dep.fit
import import_cycle

fn helper() -> ()
